--- a/public/autenticationPage.html
+++ b/public/autenticationPage.html
@@ -16,19 +16,19 @@
     <header>
         <div class="header">
             <a href="mainPage.html" id="logo">Pro Credit</a>
-            <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-            <a href="autenticationPage.html" id="profileLink">Профиль</a>
+            <a href="applicationsPage.html" id="applications-link">Заявки</a>
+            <a href="autenticationPage.html" id="profile-link">Профиль</a>
         </div>
     </header>
     <main>
-        <div class="autenticationPage">
+        <div class="autentication-page">
             <h1 id="autentication">Вход</h1>
-            <div id="autenticationBox">
-                <form id="autenticationForm" method="post">
+            <div id="autentication-box">
+                <form id="autentication-form" method="post">
                     <input type="text" class="input" id="login" placeholder="Логин" />
                     <input type="password" class="input" id="password" placeholder="Пароль" />
-                    <input class="buttonType1" type="submit" id="submit" value="Войти" href="mainPage.html" />
-                    <button id="newAccountButton">
+                    <input class="button-type-1" type="submit" id="submit" value="Войти" href="mainPage.html" />
+                    <button id="new-account-button">
               <a href="registrationPage.html">Зарегистрироваться</a>
             </button>
                 </form>
