--- a/public/mainPage.html
+++ b/public/mainPage.html
@@ -17,37 +17,37 @@
     <header>
         <div class="header">
             <a href="mainPage.html" id="logo">Pro Credit</a>
-            <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-            <a href="autenticationPage.html" id="profileLink">Профиль</a>
+            <a href="applicationsPage.html" id="applications-link">Заявки</a>
+            <a href="autenticationPage.html" id="profile-link">Профиль</a>
         </div>
     </header>
     <main>
-        <div class="mainPage">
+        <div class="main-page">
             <h1 id="services">Услуги</h1>
-            <div class="servicesBoxesContainer">
-                <div class="servicesBoxes" id="cashCreditBox">
-                    <p id="cashCreditTitle">Кредит наличными</p>
-                    <img id="cashCreditIcon" src="/public/img/cashCreditIcon.svg" />
+            <div class="services-boxes-container">
+                <div class="services-boxes" id="cash-credit-box">
+                    <p id="cash-credit-title">Кредит наличными</p>
+                    <img id="cash-credit-icon" src="/public/img/cashCreditIcon.svg" />
                 </div>
-                <div class="servicesBoxes" id="creditCardBox">
-                    <p id="creditCardTitle">Оформление кредитной карты</p>
-                    <img id="creditCardIcon" src="/public/img/creditCardIcon.svg" />
+                <div class="services-boxes" id="credit-card-box">
+                    <p id="credit-card-title">Оформление кредитной карты</p>
+                    <img id="credit-card-icon" src="/public/img/creditCardIcon.svg" />
                 </div>
-                <div class="servicesBoxes" id="educationCreditBox">
-                    <p id="educationCreditTitle">Кредит на образование</p>
-                    <img id="educationCreditIcon" src="/public/img/educationCreditIcon.svg" />
+                <div class="services-boxes" id="education-credit-box">
+                    <p id="education-credit-title">Кредит на образование</p>
+                    <img id="education-credit-icon" src="/public/img/educationCreditIcon.svg" />
                 </div>
-                <div class="servicesBoxes" id="mortgageBox">
-                    <p id="mortgageTitle">Ипотека</p>
-                    <img id="mortgageIcon" src="/public/img/mortgageIcon.svg" />
+                <div class="services-boxes" id="mortgage-box">
+                    <p id="mortgag-tTitle">Ипотека</p>
+                    <img id="mortgage-icon" src="/public/img/mortgageIcon.svg" />
                 </div>
-                <div class="servicesBoxes" id="autoCreditBox">
-                    <p id="autoCreditTitle">Автокредит</p>
-                    <img id="autoCreditIcon" src="/public/img/autoCreditIcon.svg" />
+                <div class="services-boxes" id="autoCreditBox">
+                    <p id="auto-credit-title">Автокредит</p>
+                    <img id="auto-credit-icon" src="/public/img/autoCreditIcon.svg" />
                 </div>
-                <div class="servicesBoxes" id="businessCreditBox">
-                    <p id="businessCreditTitle">Кредит на открытие бизнеса</p>
-                    <img id="businessCreditIcon" src="/public/img/businessCreditIcon.svg" />
+                <div class="services-boxes" id="business-credit-box">
+                    <p id="business-credit-title">Кредит на открытие бизнеса</p>
+                    <img id="business-creditIcon" src="/public/img/businessCreditIcon.svg" />
                 </div>
             </div>
         </div>
