--- a/public/registrationPage.html
+++ b/public/registrationPage.html
@@ -16,34 +16,34 @@
     <header>
         <div class="header">
             <a href="mainPage.html" id="logo">Pro Credit</a>
-            <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-            <a href="autenticationPage.html" id="profileLink">Профиль</a>
+            <a href="applicationsPage.html" id="applications-link">Заявки</a>
+            <a href="autenticationPage.html" id="profile-link">Профиль</a>
         </div>
     </header>
     <main>
-        <div class="registrationPage">
+        <div class="registration-page">
             <h1 id="registration">Регистрация</h1>
-            <div id="registrationBox">
-                <form id="registrationForm" method="post">
-                    <div class="inputData">
+            <div id="registration-box">
+                <form id="registration-form" method="post">
+                    <div class="input-data">
                         <div class="personalData">
-                            <p class="subHeading" id="personalDataLabel">Личные данные</p>
+                            <p class="sub-heading" id="personal-data-label">Личные данные</p>
                             <input type="text" class="input" id="surname" name="surname" placeholder="Фамилия" />
                             <input type="text" class="input" id="name" name="name" placeholder="Имя" />
                             <input type="text" class="input" id="patronymic" name="patronymic" placeholder="Отчество" />
                             <input type="tel" class="input" id="phone" name="phone" placeholder="+7" />
                         </div>
-                        <div class="loginData">
-                            <p class="subHeading" id="contactInformationLabel">
+                        <div class="login-data">
+                            <p class="sub-heading" id="contact-information-label">
                                 Данные для входа
                             </p>
                             <input type="text" class="input" id="login" name="login" placeholder="Логин" />
-                            <input type="password" class="input" id="passwordFirst" name="password" placeholder="Пароль" />
-                            <input type="password" class="input" id="passwordSecond" placeholder="Повторите пароль" />
+                            <input type="password" class="input" id="password-first" name="password" placeholder="Пароль" />
+                            <input type="password" class="input" id="password-second" placeholder="Повторите пароль" />
                         </div>
                     </div>
-                    <div class="inputButton">
-                        <input class="buttonType1" type="submit" id="createAnAccount" value="Создать аккаунт" href="mainPage.html" />
+                    <div class="input-button">
+                        <input class="button-type-1" type="submit" id="create-an-account" value="Создать аккаунт" href="mainPage.html" />
                     </div>
                 </form>
             </div>
